// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SequenceSubmission should render 1`] = `
<DocumentFragment>
  <textarea
    class="sequence-submission-input"
    data-testid="sequence-submission-input"
    spellcheck="false"
  />
</DocumentFragment>
`;

exports[`SequenceSubmission should render with sequence is invalid error 1`] = `
<DocumentFragment>
  <textarea
    class="sequence-submission-input"
    data-testid="sequence-submission-input"
    spellcheck="false"
  >
    ACTGUACTGUACTGU+
  </textarea>
  <div
    class="message message--info"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      classname="message--icon-align-top"
      height="1.125em"
      width="1.125em"
    />
    <div
      class="message__title"
    >
      Your input contains 1 sequence
    </div>
  </div>
  <div
    class="message message--failure"
    data-testid="sequence-submission-error"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      classname="message--icon-align-top"
      height="1.125em"
      width="1.125em"
    />
    <div
      class="message__title"
    >
      <code>
        sequence 1
      </code>
      : The sequence is invalid
    </div>
  </div>
</DocumentFragment>
`;

exports[`SequenceSubmission should render with sequence is missing error 1`] = `
<DocumentFragment>
  <textarea
    class="sequence-submission-input"
    data-testid="sequence-submission-input"
    spellcheck="false"
  >
                
  </textarea>
</DocumentFragment>
`;
